/*
 * $Id: ChangeLog,v 1.2080 2004/01/16 22:23:22 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-16 17:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  + include/hbwbase.h
    * replacement for those MSVC users without the Platform SDK
  * source/pp/ppcore.c
  * source/common/hbver.c
    * changed to use hbwbase.h

2004-01-16 17:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/common/hbver.c
    * Create our own OSVERSIONINFOEX for those that don't have the
    * MS Platform SDK installed.

2004-01-16 16:40 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/pp/ppcore.c
    * cosmetic changes

2004-01-16 09:18 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapigt.h
    + Added missing HB_EXPORT to recent additions.

2004-01-16 09:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed few GPF traps in hb_ppPlatform() introduced by recent addition.
      /* pzszName was never allocated but was passed to strcat()! */
    + Added missing braces to flow structures.

2004-01-16 11:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makallbc.bat
  * makallvc.bat
    + contrib/unicode
  * contrib/unicode/makefile.vc
    + INCLUDE_DIR

2004-01-16 09:50 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/common/hbver.c
  * source/pp/ppcore.c
    * cast osversionex to osversion (is winbase.h wrong?)
  * source/rtl/filesys.c
    * casts in hb_fileTrim

2004-01-16 14:15 UTC+0100 Ignacio Ortiz <iozuniga@ozs.com>
* xharbour/source/common/hbver.c
   + Added define VER_SUITE_PERSONAL
   + Added define VER_SUITE_BLADE
   + Added support for detecting Windows Server 2003.
   + Added workstation type for Windows NT 4.0, Windows 2000 Professional, and Windows XP Home Edition or Professional.
   + Added server type for Windows Server 2003, Windows 2000 and Windows NT 4.0.